# auto-daily-rainfall-mo

./: .amlignore  .buildinfo  .gitignore  CHECKPOINT_MANAGEMENT.md  CONSENSUS_GUIDE.md  README.md  check_azure_checkpoints.py  condaenv.5rz2779f.requirements.txt  environment.yml  index.html  installation.html  mkdocs.yml  objects.inv  pyproject.toml  quickstart.html  run_2nd_order_consensus_extractions.sh  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree  installation.doctree  quickstart.doctree
.github/: copilot-instructions.md
_sources/: quickstart.md.txt
azureml/: conda-a100.yml  conda.yml  config.env.example  environment-a100.yml  environment.yml  evaluate_job.yml  extract_job.yml  finetune_job.yml
docs/: conf.py  index.md  installation.md
guide/: evaluation.html  extraction.html  finetuning.html  hpc-azure.html  ingest.html  visualisation.html
notebooks/: add_test_data_from_Ciara.ipynb  finetune_original_models.ipynb  lab_notebook_template.ipynb  make_0th_order_consensus.ipynb  make_1st_order_consensus.ipynb  make_2nd_order_consensus.ipynb  make_fake_daily_rainfall_training_data.ipynb  old_finetune_metrics.txt  validate_0th_order_consensus.ipynb  validate_0th_order_fake.ipynb  validate_1st_order_consensus.ipynb  validate_1st_order_fake.ipynb  validate_2nd_order_consensus.ipynb
reference/: architecture.html  cli.html  configuration.html
runbooks/: lab-notebook-template.html
scripts/: accelerate_config.yaml  aml_delete.sh  aml_download.sh  aml_submit.sh  aml_upload.sh  azure_evaluate_array.sh  azure_extract_array.sh  (+26 more)
(+538 files in other folders)
